--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ span.psw {
 </style>
 <body>
 
-<h2>Modal Login Form</h2>
+<h2>My Smart Home Application</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
