--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ span.psw {
     cursor: pointer;
 }
 
+h2 {
+    font-family:  verdana;
+}
+
 /* Add Zoom Animation */
 .animate {
     -webkit-animation: animatezoom 0.6s;
