--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles/styles.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
@@ -95,6 +96,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
          </div>
           </div>
         </div>      
+      </div>
+      <br>
+      <div class="w3-card-2 w3-round w3-white w3-hide-small">
+        <div class="w3-container">
+          <h1>Rooms</h1>
+          <p> <button class="button5">Living room</button>
+            
+          </p>
+        </div>
       </div>
       <br>
       
