--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <style>
 /* Full-width input fields */
+
+
+body {
+    background: 000000;
+}
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
