--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <style>
+body {
+                     /* vet ej hur vi ska lösa */
+    background-image:url(https://static.pexels.com/photos/225232/pexels-photo-225232.jpeg);
+}
 /* Full-width input fields */
 input[type=text], input[type=password] {
     width: 100%;
@@ -32,6 +36,7 @@ button:hover {
     padding: 10px 18px;
     background-color: #f44336;
 }
+
 
 /* Center the image and position the close button */
 .imgcontainer {
@@ -124,7 +129,8 @@ h2 {
     }
 }
 </style>
-<body>
+
+<body class="imgcontainer"> 
 
 <h2>My Smart Home Application</h2>
 
