--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 body {
                      /* vet ej hur vi ska lösa */
     background-image:url(https://static.pexels.com/photos/225232/pexels-photo-225232.jpeg);
+    background-size: 100px;
 }
 /* Full-width input fields */
 input[type=text], input[type=password] {
