--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ h2 {
 
 <h2>My Smart Home Application</h2>
 
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto; display: block;">Login</button>
 
 <div id="id01" class="modal">
   
