--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ span.psw {
 h2 {
     font-family:  Bradley hand;
     font-size: 32px;
-    font: #FFFFFF;
+    color: #FFFFFF;
 }
 
 /* Add Zoom Animation */
