--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <style>
 body {
                      /* vet ej hur vi ska lösa */
-    background-image:url(https://static.pexels.com/photos/225232/pexels-photo-225232.jpeg);
+    background-image:background.jpg;
     background-position: center;
+    
 }
 /* Full-width input fields */
 input[type=text], input[type=password] {
