--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 body {
                      /* vet ej hur vi ska lösa */
-    background-image:background.jpg;
+
     background-position: center;
     
 }
@@ -135,6 +135,9 @@ h2 {
 </style>
 
 <body class="imgcontainer"> 
+
+
+<img src="max.png">
 
 <h2>My Smart Home Application</h2>
 
