--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@ button {
     width: 100%;
 }
 
+
+img {
+width: 100%;
+height: 100%;
+
+
+}
 button:hover {
     opacity: 0.8;
 }
@@ -134,10 +141,9 @@ h2 {
 }
 </style>
 
-<body class="imgcontainer"> 
 
 
-<img src="background.jpg">
+<img src="background.jpg" >
 
 <h2>My Smart Home Application</h2>
 
