--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <style>
 body {
                      /* vet ej hur vi ska lösa */
-
+background-image: background.jpg;
     background-position: center;
+
     
 }
 /* Full-width input fields */
@@ -141,9 +142,8 @@ h2 {
 }
 </style>
 
-<body class="imgcontainer">
+ <body class="imgcontainer">  
 
-<img src="background.jpg" >
 
 <h2>My Smart Home Application</h2>
 
