--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <style>
 body {
-                     /* vet ej hur vi ska lösa */
-background-image: background.jpg;
+    
+
     background-position: center;
+  
+
 
     
 }
@@ -142,7 +144,10 @@ h2 {
 }
 </style>
 
- <body class="imgcontainer">  
+
+ 
+<div>
+<img src="background.jpg">
 
 
 <h2>My Smart Home Application</h2>
@@ -173,6 +178,8 @@ h2 {
       <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
   </form>
+</div>
+
 </div>
 
 <script>
