--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
 <style>
+
+
+
 body {
     
+    background-color: #FFFFFF;
+    color: #000000;
 
     background-position: center;
+    background-repeat: no-repeat; 
+
+    font-family: Bradley Hand;
+
   
 
 
     
 }
+
+
+
 /* Full-width input fields */
 input[type=text], input[type=password] {
     width: 100%;
@@ -32,9 +44,10 @@ button {
 }
 
 
-img {
-width: 100%;
-height: 100%;
+a {
+    font-family: Bradley Hand;
+}
+
 
 
 }
@@ -69,6 +82,7 @@ img.avatar {
 span.psw {
     float: right;
     padding-top: 16px;
+    font-family: Bradley Hand;
 }
 
 /* The Modal (background) */
@@ -84,6 +98,7 @@ span.psw {
     background-color: #000000; /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 60px;
+    background-image: url(background.jpg);
 }
 
 /* Modal Content/Box */
@@ -91,7 +106,7 @@ span.psw {
     background-color: #fefefe;
     margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 60%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button (x) */
@@ -114,6 +129,10 @@ h2 {
     font-family:  Bradley hand;
     font-size: 32px;
     color: #FFFFFF;
+}
+
+label {
+    font-family: Bradley Hand;
 }
 
 /* Add Zoom Animation */
@@ -145,9 +164,8 @@ h2 {
 </style>
 
 
- 
-<div>
-<img src="background.jpg">
+ <body>
+
 
 
 <h2>My Smart Home Application</h2>
@@ -180,7 +198,7 @@ h2 {
   </form>
 </div>
 
-</div>
+
 
 <script>
 // Get the modal
