--- a/template.html
+++ b/template.html
@@ -104,6 +104,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <button onclick="yourFunction()" class="dropbtn">Livingroom</button>
           <div id="myDropdown" class="dropdown-content">
           <a href="#">TV</a>
+          
+          <label class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label>
+
+
           <a href="#">Ceiling Lamp</a>
           <a href="#">Speakers</a>
           </div>       
