--- a/template.html
+++ b/template.html
@@ -26,12 +26,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 </div>
 
 <!-- Navbar on small screens -->
-<div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
-</div>
+
 
 <!-- Page Container -->
 <div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">    
@@ -98,7 +93,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
     <div class="w3-col m7">
     
 
-         <div class="w3-card-2 w3-round w3-white w3-hide-small">
+       <div class="w3-card-2 w3-round w3-white w3-hide-small">
         <div class="w3-container">
           <h1>Rooms</h1>
           <div class="dropdown">
@@ -131,7 +126,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
     <!-- Right Column --> 
     <!--Tid och datum -->
       <p><h2>Date & Time</h2></p>
-        <div class="w3-col m2">
+       <!-- <div class="w3-col m2">-->
       <div class="w3-card-2 w3-round w3-white w3-center">
         <div class="w3-container">
     
