--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ span.psw {
 h2 {
     font-family:  Bradley hand;
     font-size: 32px;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 /* Add Zoom Animation */
@@ -146,15 +146,16 @@ h2 {
 
 
  
-<div>
-<img src="background.jpg">
+<div position="center">
 
 
 <h2>My Smart Home Application</h2>
 
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"">Login</button>
 
 <div id="id01" class="modal">
+
+
   
   <form class="modal-content animate" action="/action_page.php">
     <div class="imgcontainer">
