--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <style>
 body {
     
-
-    background-position: center;
-  
+    background-image:url('background.jpg'); width:1024px; height:768px;
+    background-size: 100%;
+    background-origin: content;
+    background-repeat: no-repeat;  
 
 
     
@@ -81,7 +82,7 @@ span.psw {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: #000000; /* Fallback color */
+    background-image: #FFFFFF; /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 60px;
 }
@@ -114,6 +115,7 @@ h2 {
     font-family:  Bradley hand;
     font-size: 32px;
     color: #000000;
+    position: center;
 }
 
 /* Add Zoom Animation */
@@ -146,7 +148,7 @@ h2 {
 
 
  
-<div position="center">
+<div style="position:center;">
 
 
 <h2>My Smart Home Application</h2>
