--- a/template.html
+++ b/template.html
@@ -96,17 +96,72 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
         <div class="w3-container">
           <h1>Rooms</h1>
           <div class="dropdown">
-          <button onclick="midFunction()" class="dropbtn">Livingroom</button>
-          <div id="midDropdown" class="dropdown-content">
-          <a href="#">TV <label style="left:40%; top:8px" class="switch">
+          <button onclick="livingroomFunction()" class="dropbtn">Livingroom</button>
+          <div id="livingroomDropdown" class="dropdown-content">
+          <a href="#">TV <label style="left:50%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Ceiling Lamp <label style="left:15%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Table Lamp<label style="left:22%; top:8px" class="switch">
           <input type="checkbox">
           <div class="slider round"></div>
           </label></a>
   </div>
-</div>          
+
+</div>     
+
+<div style="width:15%" class="dropdown">
+          <button onclick="kitchenFunction()" class="dropbtn">Kitchen</button>
+          <div id="kitchenDropdown" class="dropdown-content">
+          <a href="#">Fridge <label style="left:40%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Ceiling Lamp <label style="left:15%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Freezer <label style="left:36%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Oven <label style="left:45%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+  </div>
+
+</div> 
+
+<div style="width:15%" class="dropdown">
+          <button onclick="bedroomFunction()" class="dropbtn">Bedroom</button>
+          <div id="bedroomDropdown" class="dropdown-content">
+          <a href="#">Table Lamp <label style="left:20%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Ceiling Lamp <label style="left:15%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+          <a href="#">Air-Condition <label style="left:15%; top:8px" class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+          </label></a>
+        
+  </div>
+
+</div> 
+
+
         </div>
         <br>
       </div>
+
 
 
 
