--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@ h2 {
 
 
  
-<div style="position:center;">
+<div>
 
 
 <h2>My Smart Home Application</h2>
 
-<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"">Login</button>
+<button onclick="document.getElementById('id01').style.display='block'" style="position:center;width:auto;"">Login</button>
 
 <div id="id01" class="modal">
 
