--- a/template.html
+++ b/template.html
@@ -92,7 +92,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
     </div>
     
     <!-- Middle Column -->
-    <div class="w3-col m7">
+    <div style="padding-right:5%; padding-left:5%" class="w3-col m7">
     
 
        <div class="w3-card-2 w3-round w3-white w3-hide-small">
