--- a/template.html
+++ b/template.html
@@ -101,10 +101,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="dropdown">
           <button onclick="livingroomFunction()" class="dropbtn">Livingroom</button>
           <div id="livingroomDropdown" class="dropdown-content">
-          <a href="#">TV <label style="left:50%; top:8px" class="switch">
+          <a>TV <label style="left:50%; top:8px" class="switch">
           <input type="checkbox">
           <div class="slider round"></div>
-          </label></a>
+          </label></li>
           <a href="#">Ceiling Lamp <label style="left:15%; top:8px" class="switch">
           <input type="checkbox">
           <div class="slider round"></div>
