--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ h2 {
 
 <button onclick="document.getElementById('id01').style.display='block'" style="position:center;width:auto;"">Login</button>
 
+<a href="registerSH.php">Register</a>
+
 <div id="id01" class="modal">
-
-
   
   <form class="modal-content animate" action="/action_page.php">
     <div class="imgcontainer">
