--- a/template.html
+++ b/template.html
@@ -57,7 +57,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="slider round"></div>
           </label></a>  
 
-                    TV <a href="#"><label class="switch">
+          TV <a href="#"><label class="switch">
           <input type="checkbox">
           <div class="slider round"></div>
           </label></a>
@@ -417,7 +417,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           </label></a> 
                     Air.C <a href="#"><label class="switch">
 
-          <h1>Rooms</h1>
+         <!-- <h1>Rooms</h1>
           <div class="dropdown">
           <button onclick="livingroomFunction()" class="dropbtn">Livingroom</button>
           <div id="livingroomDropdown" class="dropdown-content">
@@ -426,10 +426,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="slider round"></div>
           </label></li>
           <a href="#">Ceiling Lamp <label style="left:15%; top:8px" class="switch">
->>>>>>> origin/master
+
           <input type="checkbox">
           <div class="slider round"></div>
-          </label></a>
+          </label></a>-->
           
           Air.C <a href="#"><label class="switch">
           <input type="checkbox">
