--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ h2 {
 
 <h2>My Smart Home Application</h2>
 
-<button onclick="document.getElementById('id01').style.display='block'" style="position:center;width:auto;"">Login</button>
-
+<!--<button onclick="document.getElementById('id01').style.display='block'" style="position:center;width:auto;"">Login</button>-->
+<a href="login.php">Log in</a>
 <a href="registerSH.php">Register</a>
 
 <div id="id01" class="modal">
